View Issue Details

IDProjectCategoryView StatusLast Update
0024311Open CASCADEOCCT:Visualizationpublic2013-12-19 13:58
Reporterkgv Assigned Toabv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024311: TKOpenGl - disappearing 2D dimension text
DescriptionIn some cases dimensional text is not visible on some OpenGL implementations.
Steps To Reproduce
test bugs vis bug24133_4 1
TagsNo tags attached.
Test case number

Attached Files

  • dim.png (4,485 bytes)

Activities

kgv

2013-11-02 18:08

developer  

dim.png (4,485 bytes)

kgv

2013-11-02 18:21

developer   ~0026432

Dear apl,

please review proposed solution in CR24311 branch.

apl

2013-11-05 09:40

developer   ~0026444

Dear Bugmaster,

The branch CR24311 is reviewed.

Please test.

Related Changesets

occt: master 543f0db0

2013-11-02 14:18:45

abv


Committer: abv Details Diff
0024311: TKOpenGl - desappeared 2D dimension text

OpenGl_Text - correct stecil buffer filling
Affected Issues
0024311
mod - src/OpenGl/OpenGl_Text.cxx Diff File

Issue History

Date Modified Username Field Change
2013-11-02 18:08 kgv New Issue
2013-11-02 18:08 kgv Assigned To => kgv
2013-11-02 18:08 kgv File Added: dim.png
2013-11-02 18:21 kgv Note Added: 0026432
2013-11-02 18:21 kgv Status new => resolved
2013-11-02 18:21 kgv Description Updated
2013-11-02 18:21 kgv Steps to Reproduce Updated
2013-11-02 18:22 kgv Assigned To kgv => apl
2013-11-02 18:24 kgv Summary TKOpenGl - desappeared 2D dimension text => TKOpenGl - disappearing 2D dimension text
2013-11-05 09:40 apl Note Added: 0026444
2013-11-05 09:40 apl Assigned To apl => bugmaster
2013-11-05 09:40 apl Status resolved => reviewed
2013-11-06 11:07 abv Changeset attached => occt master 543f0db0
2013-11-06 11:07 abv Assigned To bugmaster => abv
2013-11-06 11:07 abv Status reviewed => verified
2013-11-06 11:07 abv Resolution open => fixed
2013-12-19 13:51 bugmaster Status verified => closed
2013-12-19 13:58 bugmaster Fixed in Version => 6.7.0