0024311: TKOpenGl - desappeared 2D dimension text

OpenGl_Text - correct stecil buffer filling